# trails-indexer-v2

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt  test.py
config/: configuration.toml
database/: Readme.me  neo4j.py  vectorstore.py
functions/: chunking.py  embeddings.py  llm.py  metadata.py  optimization.py  summarization.py
schema/: descriptions.py  general.py  metadata.py  prompts.py  properties.py  schemas.py
tests/: test_config_loader.py  test_database_connection.py  test_error_handler.py
tests/documents/: text1
utils/: config_loader.py  error_handler.py  nlp.py
